; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/mm/extr_iomap_32.c_iomap_create_wc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/mm/extr_iomap_32.c_iomap_create_wc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_PAGE_CACHE_WC = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@__PAGE_KERNEL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iomap_create_wc(i64 %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i64, i64* @_PAGE_CACHE_WC, align 8
  store i64 %10, i64* %8, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i32 @is_io_mapping_possible(i64 %11, i64 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %18, label %15

15:                                               ; preds = %3
  %16 = load i32, i32* @EINVAL, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %4, align 4
  br label %34

18:                                               ; preds = %3
  %19 = load i64, i64* %5, align 8
  %20 = load i64, i64* %5, align 8
  %21 = load i64, i64* %6, align 8
  %22 = add i64 %20, %21
  %23 = call i32 @io_reserve_memtype(i64 %19, i64 %22, i64* %8)
  store i32 %23, i32* %9, align 4
  %24 = load i32, i32* %9, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %18
  %27 = load i32, i32* %9, align 4
  store i32 %27, i32* %4, align 4
  br label %34

28:                                               ; preds = %18
  %29 = load i64, i64* @__PAGE_KERNEL, align 8
  %30 = load i64, i64* %8, align 8
  %31 = or i64 %29, %30
  %32 = call i32 @__pgprot(i64 %31)
  %33 = load i32*, i32** %7, align 8
  store i32 %32, i32* %33, align 4
  store i32 0, i32* %4, align 4
  br label %34

34:                                               ; preds = %28, %26, %15
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32 @is_io_mapping_possible(i64, i64) #1

declare dso_local i32 @io_reserve_memtype(i64, i64, i64*) #1

declare dso_local i32 @__pgprot(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
